static/global.css
:root {
  --color-background: #0a0a1a;
  --color-dark-purple: #1f0b3a;
  --color-darkest-purple: #08020f;
  --color-lightest-grey: #acacac;
  --color-lilac: #c4bbdd;
  --color-slightly-dark-lilac: #a79fbd;
  --color-darker-lilac: #655f78;
  --color-dark-lilac: #54517c;
  --color-darkest-lilac: #4c485b;
  --color-off-white: #faf9f6;
  --color-black: #000000;

  --color-card-outer-purple: #100b20;
  --color-card-inner-purple: #282239;

  --background-inner-color: #1f192a;
  --background-outer-color: #060610;

  --base-fontsize: 10 !important;
  --base-design-width: 375;

  --color-parallax-main: #211a3b;

  @media (min-width: 675px) {
    --base-fontsize: 10 !important;
    --base-design-width: 1440;
  }
}

html,
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  box-sizing: border-box;
  overscroll-behavior: none;
  background: radial-gradient(
    56.63% 56.63% at 50% 43.37%,
    var(--background-inner-color) 0%,
    var(--background-outer-color) 100%
  );
  color: var(--color-off-white);
  font-size: calc(
    var(--base-fontsize) / var(--base-design-width) * 100vw
  ) !important;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
}

